<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Capstone Card Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="player_1_1">P1</string>
    <string name="player_2_2">P2</string>
    <string name="player_3_3">P3</string>
    <string name="player_4_4">P4</string>
    <string name="menu_1">0</string>
    <string name="menu_2">Pass Turn</string>
    <string name="menu_3">View Hand</string>
    <string name="menu_4">View Tables</string>
    <string name="card">A game card. Could be a card in the players hand, 
        or a card on any players table. Also used for the deck and the 
        discard pile.</string>
    <string name="popupimage">The currently selected cards image.</string>
    <string name="newgamebutton">New Game</string>
    <string name="joingamebutton">Join Game</string>
    <string name="viewcardsbutton">View Cards </string>
    <string name="settingsbutton">Settings</string>
    <string name="title_activity_login_screen">Login</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="create">Create New Account</string>
    <string name="stay_logged_in">Keep Me Logged In</string>
    <string name="title_activity_create_account">Create Account</string>

</resources>